# semantic-feedback-model-alignment

./: .gitignore  EXPERIMENT.md  README.md  flake.nix  llm-in-lsp-experiment.sln  pyproject.toml
config/: default.yml  smoke.yml
data/soruce/documents/: README.md  README.txt  file_list.txt  framework-laptop-13-specs.md  github-create-issue-api.md  ikea-billy-mainual.md  king-arthur-pancakes.md  manifest.tsv  standard-fragment.md  stripe-payment-intent.md
data/soruce/prompts/analyze/: system.md  user.md
data/soruce/prompts/control/: user.md
data/soruce/prompts/feedback/: feedback.md  user.md
data/soruce/prompts/guided/: system.md  user.md
src/: 1-sources.ipynb  2-infer.ipynb  3-project.ipynb  4-align.ipynb  5-score.ipynb  6-quality.ipynb  7-summary.ipynb  7-summary.md  README.md  smoke_e2e.py
src/lib/: __init__.py  align_pipeline.py  analyze_pipeline.py  infer_pipeline.py
src/lib/csharp_metrics/: Program.cs
src/lib/csharp_model_extractor/: CSharpModelExtractor.csproj  Program.cs
tests/: test_align_pipeline.py  test_infer_pipeline.py
