[project]
name = "llm-in-lsp-experiment"
version = "0.1.0"
description = "Experiment runner for LLM-driven model inference and feedback analysis."
readme = "src/README.md"
requires-python = ">=3.11"
dependencies = [
  "bdi-kit>=0.10.0",
  "httpx>=0.27.0",
  "ipywidgets>=8.1.7",
  "ipykernel>=7.2.0",
  "jupyter-bokeh>=4.0.5",
  "magneto-python",
  "matplotlib>=3.8.4",
  "nbclient>=0.10.4",
  "nbformat>=5.10.4",
  "openai>=1.76.0",
  "pandas>=3.0.2",
  "pydantic>=2.11.0",
  "python-dotenv>=1.1.0",
  "pyyaml>=6.0.2",
  "seaborn>=0.13.2",
  "torch",
  "valentine>=0.5.0",
]

[project.scripts]
lsp-llm-experiment = "src.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = [
  "**/__pycache__",
]
reportMissingModuleSource = false

[tool.uv.sources]
magneto-python = { git = "https://github.com/VIDA-NYU/magneto-matcher.git", subdirectory = "algorithms/magneto" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pytest>=8.3.5",
    "ruff>=0.15.12",
]
